// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayLabel should render a \`danger color\` label 1`] = `
<span class="label label-danger">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a \`default color\` label 1`] = `
<span class="label label-secondary">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a \`info color\` label 1`] = `
<span class="label label-info">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a \`success color\` label 1`] = `
<span class="label label-success">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a \`warning color\` label 1`] = `
<span class="label label-warning">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a label with classes 1`] = `
<span class="label label-secondary my-custom-class">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a label with id 1`] = `
<span class="label label-secondary" id="myId">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render a label with label 1`] = `
<span class="label label-secondary">
  <span class="text-truncate-inline">
    <span class="text-truncate">Foo</span>
  </span>
</span>
`;

exports[`ClayLabel should render a label with link 1`] = `
<span class="label label-secondary">
  <span class="text-truncate-inline">
    <span class="text-truncate">
      <a href="#1">Foo</a>
    </span>
  </span>
</span>
`;

exports[`ClayLabel should render a label with removable 1`] = `
<span class="label label-secondary label-dismissible">
  <span class="label-item label-item-expand">
    <span class="text-truncate-inline">
      <span class="text-truncate">Foo</span>
    </span>
  </span>
  <span class="label-item label-item-after">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
        <title>times</title>
        <use xlink:href="icons.svg#times"></use>
      </svg>
    </button>
  </span>
</span>
`;

exports[`ClayLabel should render a large label 1`] = `
<span class="label label-secondary label-lg">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;

exports[`ClayLabel should render the default markup 1`] = `
<span class="label label-secondary">
  <span class="text-truncate-inline">
    <span class="text-truncate"></span>
  </span>
</span>
`;
